@@ -275,4 +275,157 @@
 			</control>
         </control>
     </include>
+    <include name="Viewtype-ProgramInfo">
+		<!-- INFO VIEW -->
+		<control type="group">
+			<include>FullscreenDimensions</include>
+			<include>OptionsShutdownAnimation</include>
+			<include>BannerListAnimations</include>
+			<visible>Control.IsVisible(52)</visible>
+			<control type="wraplist" id="52">
+				<posx>0</posx>
+				<posy>134</posy>
+				<width>1920</width>
+				<height>1000</height>
+				<scrolltime tween="cubic" easing="out">500</scrolltime>
+				<orientation>horizontal</orientation>
+				<viewtype label="42318">list</viewtype>
+				<ondown condition="!Skin.HasSetting(KioskMode)">9010</ondown>
+				<ondown condition="Skin.HasSetting(KioskMode)">52</ondown>
+				<onright>52</onright>
+				<onup>52</onup>
+				<onleft>52</onleft>
+				<focusposition>0</focusposition>
+				<preloaditems>2</preloaditems>
+				<itemlayout width="1920">
+					<control type="group">
+						<posx>80</posx>
+						<control type="image">
+							<posx>0</posx>
+							<posy>0</posy>
+							<width>740</width>
+							<height>740</height>
+							<texture background="true" diffuse="views/newgloss/banner-740.png">$INFO[ListItem.Thumb]</texture>
+							<aspectratio scalediffuse="true" align="right" aligny="bottom">keep</aspectratio>
+							<bordertexture border="18">views/newgloss/border.png</bordertexture>
+							<bordersize>18</bordersize>
+						</control>
+						<control type="image">
+							<posx>0</posx>
+							<posy>720</posy>
+							<width>740</width>
+							<height>740</height>
+							<texture diffuse="views/posterview/diffuse-ref.png" flipy="true" background="true">$INFO[ListItem.Thumb]</texture>
+							<aspectratio scalediffuse="true" align="right" aligny="top">keep</aspectratio>
+							<bordersize>18</bordersize>
+							<bordertexture border="18" diffuse="views/posterview/diffuse-ref.png" flipy="true">views/newgloss/border.png</bordertexture>
+						</control>
+					</control>
+					<control type="group">
+						<posx>880</posx>
+						<posy>500</posy>
+						<control type="label">
+							<posx>0</posx>
+							<posy>0</posy>
+							<width>900</width>
+							<height>45</height>
+							<align>left</align>
+							<aligny>center</aligny>
+							<font>Font-Alaska-S45-BL</font>
+							<textcolor>mod-infotags</textcolor>
+							<info>ListItem.Label</info>
+							<scroll>false</scroll>
+						</control>
+						<control type="label">
+							<posx>0</posx>
+							<posy>40</posy>
+							<width>900</width>
+							<height>45</height>
+							<align>left</align>
+							<aligny>center</aligny>
+							<font>Font-Alaska-S29-BL</font>
+							<textcolor>mod-infotags-l</textcolor>
+							<label>$INFO[ListItem.Studio,,  •  ]$INFO[ListItem.Genre]</label>
+							<scroll>false</scroll>
+						</control>
+						<control type="textbox">
+							<posx>0</posx>
+							<posy>80</posy>
+							<width>900</width>
+							<height>140</height>
+							<align>justify</align>
+							<font>Font-Alaska-S25-NC</font>
+							<textcolor>mod-infotags</textcolor>
+							<label>$INFO[ListItem.Plot]</label>
+							<scroll>false</scroll>
+						</control>
+					</control>
+				</itemlayout>
+				<focusedlayout width="1920">
+					<control type="group">
+						<posx>80</posx>
+						<control type="image">
+							<posx>0</posx>
+							<posy>0</posy>
+							<width>740</width>
+							<height>740</height>
+							<texture background="true" diffuse="views/newgloss/banner-740.png">$INFO[ListItem.Thumb]</texture>
+							<aspectratio scalediffuse="true" align="right" aligny="bottom">keep</aspectratio>
+							<bordertexture border="18">views/newgloss/border.png</bordertexture>
+							<bordersize>18</bordersize>
+						</control>
+						<control type="image">
+							<posx>0</posx>
+							<posy>720</posy>
+							<width>740</width>
+							<height>740</height>
+							<texture diffuse="views/posterview/diffuse-ref.png" flipy="true" background="true">$INFO[ListItem.Thumb]</texture>
+							<aspectratio scalediffuse="true" align="right" aligny="top">keep</aspectratio>
+							<bordersize>18</bordersize>
+							<bordertexture border="18" diffuse="views/posterview/diffuse-ref.png" flipy="true">views/newgloss/border.png</bordertexture>
+						</control>
+					</control>
+					<control type="group">
+						<posx>880</posx>
+						<posy>500</posy>
+						<control type="label">
+							<posx>0</posx>
+							<posy>0</posy>
+							<width>900</width>
+							<height>45</height>
+							<align>left</align>
+							<aligny>center</aligny>
+							<font>Font-Alaska-S45-BL</font>
+							<textcolor>Mod_Tags</textcolor>
+							<info>ListItem.Label</info>
+							<scroll>false</scroll>
+						</control>
+						<control type="label">
+							<posx>0</posx>
+							<posy>40</posy>
+							<width>900</width>
+							<height>45</height>
+							<align>left</align>
+							<aligny>center</aligny>
+							<font>Font-Alaska-S29-BL</font>
+							<textcolor>Mod_Tags_Light</textcolor>
+							<label>$INFO[ListItem.Studio,,  •  ]$INFO[ListItem.Genre]</label>
+							<scroll>false</scroll>
+						</control>
+						<control type="textbox">
+							<posx>0</posx>
+							<posy>80</posy>
+							<width>900</width>
+							<height>140</height>
+							<align>justify</align>
+							<font>Font-Alaska-S25-NC</font>
+							<textcolor>Mod_Tags</textcolor>
+							<label>$INFO[ListItem.Plot]</label>
+							<scroll>false</scroll>
+						</control>
+					</control>
+				</focusedlayout>
+			</control>
+		</control>
+	</include>
 </includes>
