@@ -89,3 +89,5 @@ Added thumbnails view to advanced launcher.
 Added years, studios, genres as defaults for movies
 Fixed bug in Reel
 Fix thumbnails to show scrolling text
+Fixed profile info color on simple home
+Re-added Big Info view for advanced launcher
